<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/titrerdv"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:text="Ajouter Un événement"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/titre"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="Nom événement"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titrerdv"
        app:layout_constraintVertical_bias="0.16"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/datedebut"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="@string/date_d_but"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre"
        app:layout_constraintWidth_percent=".8"
        android:inputType="none"
        android:focusable="false"
        android:onClick="showDateTimePickerDialog" />

    <EditText
        android:id="@+id/datefin"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="@string/date_fin"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datedebut"
        app:layout_constraintWidth_percent=".8"
        android:inputType="none"
        android:focusable="false"
        android:onClick="showDateTimePickerDialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_addRdv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/ajouter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datefin"
        app:layout_constraintVertical_bias="0.166"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>